2010-11-02  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20101101

2010-10-16  Simon J. Gerraty  <sjg@bad.crufty.net>

	* machine.sh: like os.sh, 
	allow for uname -p producing useless drivel

2010-09-13  Simon J. Gerraty  <sjg@bad.crufty.net>

	* boot-strap: document configure knobs for meta and filemon.

	* Makefile.in (MAKE_VERSION): bump version to 20100911
	  Merge with NetBSD make, pick up
	  o meta.c - meta mode

	* make-bootstrap.sh.in: handle meta.c
	* configure.in: add knobs for use_meta and filemon_h
	  also, look for dirname, str[e]sep and strlcpy
	* util.c: add simple err[x] and warn[x]

2010-08-08  Simon J. Gerraty  <sjg@bad.crufty.net>

	* boot-strap (TOOL_DIFF): set this to ensure tests use
	  the same version of diff that configure tested

	* Makefile.in (MAKE_VERSION): bump version to 20100808
	  Merge with NetBSD make, pick up
	  o in jobs mode, when we discover we cannot make something,
	    call PrintOnError before exit.
	
2010-08-06  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100806
	  Merge with NetBSD make, pick up
	  o formatting fixes for ignored errors
	  o ensure jobs are cleaned up regardless of where wait() was called.

2010-06-28  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100618
	* os.sh (MACHINE_ARCH): watch out for drivel from uname -p

2010-06-16  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100616
	  Merge with NetBSD make, pick up
	  o man page update
	  o call PrintOnError from JobFinish when we detect an error we
	    are not ignoring. 
	
2010-06-06  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100606
	  Merge with NetBSD make, pick up
	  o man page update

2010-06-05  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100605
	  Merge with NetBSD make, pick up