@@ -104,7 +104,7 @@
 
 #if defined(LIBC_SCCS) && !defined(lint)
 /*static char *sccsid = "from: @(#)sigcompat.c	5.3 (Berkeley) 2/24/91";*/
-static char *rcsid = "$Id: sigcompat.c,v 1.20 2009/08/26 23:49:00 sjg Exp $";
+static char *rcsid = "$Id: sigcompat.c,v 1.22 2010/11/27 05:41:14 sjg Exp $";
 #endif				/* LIBC_SCCS and not lint */
 
 #undef signal
